z-index fix for IE7.

--- a/site_media/static/less/patterns-overrides.less
+++ b/site_media/static/less/patterns-overrides.less
@@ -48,6 +48,11 @@
   }
 }
 
+li.dropdown {
+    // Fix for IE7 tabs over lower elements
+    z-index: 999;
+}
+
 // Mega Menu Dropdown
 div.dropdown-menu { 
   min-width: 320px;
